Loosen ready only restriction on reverse mode request editor. BUGFIX: ironed out complications with z-index arrowheads, namely repaints, stacking

--- a/client/src/styles/Visualizer.css
+++ b/client/src/styles/Visualizer.css
@@ -68,3 +68,12 @@
   height: 100%;
   width: 100%;
 }
+.react-flow__node-typeNode {
+  z-index: 2;
+}
+.type-node__container {
+  z-index: 2;
+}
+.type-node {
+  z-index: 2;
+}
